# DZ_24

./: .env  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
learing/: apps.py  models.py  serializers.py  urls.py  views.py
learing/migrations/: 0001_initial.py
users/: filters.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: create_payments.py
users/migrations/: 0001_initial.py
